--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -1,4 +1,5 @@
 .menu-item {
+  min-width: 30%;
   height: 240px;
   flex: 1 1 auto;
   display: flex;
@@ -35,8 +36,8 @@
   .background-image {
     width: 100%;
     height: 100%;
-    background-position: center;
     background-size: cover;
+    background-position: center;
   }
 
   .content {
@@ -46,9 +47,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #fff;
+    background-color: white;
     opacity: 0.7;
-    text-transform: uppercase;
     position: absolute;
 
     .title {
