--- a/src/components/sign-in/sign-in.styles.scss
+++ b/src/components/sign-in/sign-in.styles.scss
@@ -2,5 +2,13 @@
   width: 30vw;
   display: flex;
   flex-direction: column;
-  margin: 0 40px 300px;
+  margin: 100px 40px 300px;
+
+  form {
+    .sign-in-btns-container {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+    }
+  }
 }
